--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+    {{>navbar}}
     {{{body}}}
     {{! Bootstrap Script  }}
     <script
