--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -1,1 +1,6 @@
-<h1>Welcome to Home</h1>
+
+
+<img
+  src="https://cdn.blablacar.com/kairos/assets/images/carpool_only_small-09eb14eafab9352951e1..svg"
+  alt=""
+/>
