--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,21 +1,39 @@
-<ul class="nav nav-pills">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
+<ul class="nav nav-pills d-flex justify-content-between">
   </li>
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+    <a
+      class="nav-link dropdown-toggle"
+      data-bs-toggle="dropdown"
+      href="#"
+      role="button"
+      aria-expanded="false"
+    ><img class="rounded-circle" src="https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg" alt="user" width="24px" height="24px"></a>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
-      <li><hr class="dropdown-divider"></li>
-      <li><a class="dropdown-item" href="#">Separated link</a></li>
+      <li><a class="dropdown-item" href="#">Iniciar Sesion</a></li>
+      <li><a class="dropdown-item" href="#">Registrarse</a></li>
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">Disabled</a>
+    <a class="nav-link" href="/">
+    <svg viewBox="0 0 1199.96 1014.39" width="33"><path
+      fill="#054752"
+      d="M1195.16 619.8c-31.2-184-205.8-308-390-276.8l54.4-308.3L662.96 0c-17 37-91 206-127 397 73.3 50 127 128.5 143 223 17.2 100.7-12.3 198.5-72.6 271.7 14.8 18 31.7 34.7 51 49.7 77 60.3 170.2 83.8 261 68.4 184-31.3 308-206 276.8-390z"
+    ></path><path
+      fill="#2dbeff"
+      d="M531.96 418l4-21c-69.8-47.6-157.2-69.3-247-54l54.4-308.4L146.66 0c-17.5 38.4-96.5 218.6-130.7 418-27.5 159.8-26.2 332 58.5 453 18.2 26 40.2 49.7 66.7 70.4 77 60.3 170.2 83.8 261 68.4 83.4-14 154.4-57.7 204.3-118.2-5.5-6.7-10.8-13.6-15.7-20.7-85-121.2-86-293.3-58.7-453z"
+    ></path><path
+      fill="#9ef769"
+      d="M678.96 619.8c-16-94.4-69.7-173-143-223l-4 21c-27.4 160-26 332 58.6 453 5 7.2 10.2 14 15.7 20.8 60.3-73.2 89.8-171 72.7-271.8z"
+    ></path></svg>
+    </a>
+  <li class="nav-item d-flex justify-content-end">
+    <a class="nav-link disabled">
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT" width="24" height="24" aria-hidden="true"><g fill="none" stroke="#00AFF5" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><line x1="22" y1="22" x2="16.4" y2="16.4"></line><circle cx="10" cy="10" r="9"></circle></g>
+      </svg>
+    </a>
+    <a class="nav-link disabled">
+      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT" width="24" height="24" aria-hidden="true"><path stroke-width="0" fill="#00AFF5" fill-rule="evenodd" d="M1.14 11.5a10.36 10.36 0 1120.72 0 10.36 10.36 0 01-20.72 0zM11.5 0a11.5 11.5 0 100 23 11.5 11.5 0 000-23zm.57 6.53a.57.57 0 00-1.14 0v4.4h-4.4a.57.57 0 100 1.14h4.4v4.4a.57.57 0 101.14 0v-4.4h4.4a.57.57 0 000-1.14h-4.4z"></path>
+      </svg>
+    </a>
   </li>
 </ul>
