--- a/views/trips/list.hbs
+++ b/views/trips/list.hbs
@@ -4,7 +4,7 @@
     <a
       class="card mb-2 border-1 rounded-4 shadow nav-link"
       style="width: 90%;"
-      href="/trips/link"
+      href="/trips/{{trip.id}}"
     >
       <div class="card-body">
         <li>{{trip.from}}</li>
