--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -1,1 +1,15 @@
 <h1>Detail of trip</h1>
+
+
+<div class="card border-0" style="width: 100%;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item border-0">{{trip.from}}</li>
+    <li class="list-group-item">{{trip.to}}</li>
+    <li class="list-group-item border-bottom border-top border-5">Price: {{trip.price}}€</li>
+    <li class="list-group-item border-0" style="width: 80%;">{{trip.user}}</li>
+    <li class="list-group-item">Escribir a {{trip.user}}</li>
+    <li class="list-group-item border-0">Seats</li>
+    <li class="list-group-item border-bottom border-2">Car</li>
+    <li class="list-group-item">Continuar</li>
+  </ul>
+</div>
