--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -1,26 +1,33 @@
 <h1>Create a new trip</h1>
 
-<form>
-  <fieldset disabled>
-    <legend>Disabled fieldset example</legend>
+<form action="/trips/new" method="POST">
     <div class="mb-3">
-      <label for="disabledTextInput" class="form-label">Disabled input</label>
-      <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+      <label for="user" class="form-label">User</label>
+      <input type="text" name="user" id="user" class="form-control" placeholder="User Name">
     </div>
     <div class="mb-3">
-      <label for="disabledSelect" class="form-label">Disabled select menu</label>
-      <select id="disabledSelect" class="form-select">
-        <option>Disabled select</option>
-      </select>
+      <label for="from" class="form-label">From</label>
+      <input type="text" name="from" id="from" class="form-control" placeholder="From City">
     </div>
     <div class="mb-3">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-        <label class="form-check-label" for="disabledFieldsetCheck">
-          Can't check this
-        </label>
-      </div>
+      <label for="to" class="form-label">To</label>
+      <input type="text" name="to" id="to" class="form-control" placeholder="Destiny City">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </fieldset>
+    <div class="mb-3">
+      <label for="price" class="form-label">Price</label>
+      <input type="number" name="price" id="price" class="form-control" placeholder="Price">
+    </div>
+    <div class="mb-3">
+      <label for="date" class="form-label">date</label>
+      <input type="text" name="date" id="date" class="form-control" placeholder="date">
+    </div>
+    <div class="mb-3">
+      <label for="seats" class="form-label">Seats</label>
+      <input type="number" name="seats" id="seats" class="form-control" placeholder="Seats">
+    </div>
+    <div class="mb-3">
+      <label for="comments" class="form-label">Comments</label>
+      <input type="text" name="comments" id="comments" class="form-control" placeholder="Comments">
+    </div>
+    <button type="submit" class="btn btn-primary">Create</button>
 </form>
