--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -18,8 +18,8 @@
       <input type="number" name="price" id="price" class="form-control" placeholder="Price">
     </div>
     <div class="mb-3">
-      <label for="date" class="form-label">date</label>
-      <input type="text" name="date" id="date" class="form-control" placeholder="date">
+      <label for="date" class="form-label">Date</label>
+      <input type="text" name="date" id="date" class="form-control" placeholder="Date">
     </div>
     <div class="mb-3">
       <label for="seats" class="form-label">Seats</label>
