Bcrypt to encrypt the user password

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -9,7 +9,7 @@
       aria-expanded="false"
     ><img class="rounded-circle" src="https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg" alt="user" width="24px" height="24px"></a>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="/login">Iniciar Sesion</a></li>
+      <li><a class="dropdown-item" href="/login">Iniciar Sesión</a></li>
       <li><a class="dropdown-item" href="/users/new">Registrarse</a></li>
     </ul>
   </li>
