Populate applied to trips list

--- a/views/trips/list.hbs
+++ b/views/trips/list.hbs
@@ -10,7 +10,7 @@
         <li>{{trip.from}}</li>
         <li>{{trip.to}}</li>
         <li>Price: {{trip.price}}€</li>
-        <li>{{trip.user}}</li>
+        <li>{{trip.user.user}}</li>
       </div>
     </a>
   {{/each}}
