profile views and new seeds

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -3,7 +3,19 @@
 <form action="/users/new" method="POST">
     <div class="mb-3">
       <label for="user" class="form-label">User</label>
-      <input type="text" name="user" id="user" class="form-control" placeholder="User Name">
+      <input type="text" name="user" id="user" class="form-control" placeholder="User">
+    </div>
+    <div class="mb-3">
+      <label for="name" class="form-label">name</label>
+      <input type="text" name="name" id="name" class="form-control" placeholder="Name">
+    </div>
+    <div class="mb-3">
+      <label for="lastName" class="form-label">Last Name</label>
+      <input type="text" name="lastName" id="lastName" class="form-control" placeholder="Last Name">
+    </div>
+    <div class="mb-3">
+      <label for="birthdate" class="form-label">Birthdate</label>
+      <input type="date" name="birthdate" id="birthdate" class="form-control" placeholder="Birthdate">
     </div>
     <div class="mb-3">
       <label for="email" class="form-label">Email</label>
