Profile Edit MVC

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -2,7 +2,7 @@
 
 <a href="/photo">Edit Profile Photo</a>
 
-<a href="/profile">Edit Personal Info</a>
+<a href="/profile/{{currentUser.id}}/edit">Edit Personal Info</a>
 
 <h1>You have a Verify Profile</h1>
 <li>DNI</li>
