--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,5 +1,7 @@
 <h1>{{currentUser.user}}</h1>
 
+<img src="{{currenUser.image}}" alt="profile photo">
+
 <a href="/photo">Edit Profile Photo</a>
 
 <a href="/profile/{{currentUser.id}}/edit">Edit Personal Info</a>
