--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -1,6 +1,98 @@
+<div class="home position-relative">
+  <img
+    src="https://cdn.blablacar.com/kairos/assets/images/carpool_only_small-09eb14eafab9352951e1..svg"
+    class="img-fluid"
+  />
+  <h1 class="position-absolute top-0 pt-3">Your pick of rides at low prices</h1>
+</div>
 
-
-<img
-  src="https://cdn.blablacar.com/kairos/assets/images/carpool_only_small-09eb14eafab9352951e1..svg"
-  alt=""
-/>
+<div class="card mx-auto" style="width: 80%;">
+  <div class="card-body">
+    <div>
+      <svg
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+        class="kirk-icon sc-ksBlkl Jvfzv"
+        width="24"
+        height="24"
+        aria-hidden="true"
+      ><path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 17C14.7614 17 17 14.7614 17 12C17 9.23858 14.7614 7 12 7C9.23858 7 7 9.23858 7 12C7 14.7614 9.23858 17 12 17Z"
+          fill="#708C91"
+        ></path></svg>
+    </div>
+    <div>
+      <svg
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+        class="kirk-icon sc-ksBlkl Jvfzv"
+        width="24"
+        height="24"
+        aria-hidden="true"
+      ><path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 17C14.7614 17 17 14.7614 17 12C17 9.23858 14.7614 7 12 7C9.23858 7 7 9.23858 7 12C7 14.7614 9.23858 17 12 17Z"
+          fill="#708C91"
+        ></path></svg>
+    </div>
+    <div>
+      <svg
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+        class="kirk-icon sc-ksBlkl Jvfzv"
+        width="24"
+        height="24"
+        aria-hidden="true"
+      ><g fill="none" fill-rule="evenodd"><rect
+            x="3.5"
+            y="3.5"
+            width="17"
+            height="17"
+            rx="3.5"
+            stroke="#708C91"
+          ></rect><path
+            d="M3.5 7C3.5 5.067 5.067 3.5 7 3.5H17C18.933 3.5 20.5 5.067 20.5 7V8.5H3.5V7Z"
+            stroke="#708C91"
+          ></path><rect
+            x="6"
+            y="11"
+            width="2"
+            height="2"
+            rx="1"
+            fill="#708C91"
+          ></rect><rect
+            x="6"
+            y="15"
+            width="2"
+            height="2"
+            rx="1"
+            fill="#708C91"
+          ></rect><rect
+            x="11"
+            y="11"
+            width="2"
+            height="2"
+            rx="1"
+            fill="#708C91"
+          ></rect><rect
+            x="11"
+            y="15"
+            width="2"
+            height="2"
+            rx="1"
+            fill="#708C91"
+          ></rect><rect
+            x="16"
+            y="11"
+            width="2"
+            height="2"
+            rx="1"
+            fill="#708C91"
+          ></rect></g></svg>
+    </div>
+    <a href="#" class="btn btn-primary w-100">Search</a>
+  </div>
+</div>
