--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,8 +7,7 @@
       href="#"
       role="button"
       aria-expanded="false"
-    >
-    <img class="rounded-circle" src="https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg" alt="user" width="24px" height="24px"></a>
+    ><img class="rounded-circle" src="https://cdn.blablacar.com/kairos/assets/images/default-m-818bf2b20d4b06a052dd..svg" alt="user" width="24px" height="24px"></a>
     <ul class="dropdown-menu">
       {{#if currentUser.user}}
       <li><a class="dropdown-item" href="/trips/new">Offer a ride</a></li>
@@ -37,7 +36,6 @@
       d="M678.96 619.8c-16-94.4-69.7-173-143-223l-4 21c-27.4 160-26 332 58.6 453 5 7.2 10.2 14 15.7 20.8 60.3-73.2 89.8-171 72.7-271.8z"
     ></path></svg>
     </a>
-    <h1> Welcome {{currentUser.user}}</h1>
   <div>
   <li class="nav-item d-flex justify-content-end ml-2">
     <a class="nav-link  mr-3" href="/trips">
