--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -8,7 +8,7 @@
 
 <div class="card mx-auto" style="width: 80%;">
   <div class="card-body">
-    <div>
+    <div class="mb-3">
       <svg
         viewBox="0 0 24 24"
         xmlns="http://www.w3.org/2000/svg"
@@ -23,7 +23,8 @@
           fill="#708C91"
         ></path></svg>
     </div>
-    <div>
+    <div class="border-bottom"></div>
+    <div class="mb-3 mt-3 d-flex">
       <svg
         viewBox="0 0 24 24"
         xmlns="http://www.w3.org/2000/svg"
@@ -38,60 +39,76 @@
           fill="#708C91"
         ></path></svg>
     </div>
-    <div>
-      <svg
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-        class="kirk-icon sc-ksBlkl Jvfzv"
-        width="24"
-        height="24"
-        aria-hidden="true"
-      ><g fill="none" fill-rule="evenodd"><rect
-            x="3.5"
-            y="3.5"
-            width="17"
-            height="17"
-            rx="3.5"
-            stroke="#708C91"
-          ></rect><path
-            d="M3.5 7C3.5 5.067 5.067 3.5 7 3.5H17C18.933 3.5 20.5 5.067 20.5 7V8.5H3.5V7Z"
-            stroke="#708C91"
-          ></path><rect
-            x="6"
-            y="11"
-            width="2"
-            height="2"
-            rx="1"
-            fill="#708C91"
-          ></rect><rect
-            x="6"
-            y="15"
-            width="2"
-            height="2"
-            rx="1"
-            fill="#708C91"
-          ></rect><rect
-            x="11"
-            y="11"
-            width="2"
-            height="2"
-            rx="1"
-            fill="#708C91"
-          ></rect><rect
-            x="11"
-            y="15"
-            width="2"
-            height="2"
-            rx="1"
-            fill="#708C91"
-          ></rect><rect
-            x="16"
-            y="11"
-            width="2"
-            height="2"
-            rx="1"
-            fill="#708C91"
-          ></rect></g></svg>
+    <div class="border-bottom"></div>
+    <div class="d-flex mt-3 mb-3">
+      <div class="p-2 flex-grow-1">
+        <svg
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          class="kirk-icon sc-ksBlkl Jvfzv"
+          width="24"
+          height="24"
+          aria-hidden="true"
+        ><g fill="none" fill-rule="evenodd"><rect
+              x="3.5"
+              y="3.5"
+              width="17"
+              height="17"
+              rx="3.5"
+              stroke="#708C91"
+            ></rect><path
+              d="M3.5 7C3.5 5.067 5.067 3.5 7 3.5H17C18.933 3.5 20.5 5.067 20.5 7V8.5H3.5V7Z"
+              stroke="#708C91"
+            ></path><rect
+              x="6"
+              y="11"
+              width="2"
+              height="2"
+              rx="1"
+              fill="#708C91"
+            ></rect><rect
+              x="6"
+              y="15"
+              width="2"
+              height="2"
+              rx="1"
+              fill="#708C91"
+            ></rect><rect
+              x="11"
+              y="11"
+              width="2"
+              height="2"
+              rx="1"
+              fill="#708C91"
+            ></rect><rect
+              x="11"
+              y="15"
+              width="2"
+              height="2"
+              rx="1"
+              fill="#708C91"
+            ></rect><rect
+              x="16"
+              y="11"
+              width="2"
+              height="2"
+              rx="1"
+              fill="#708C91"
+            ></rect></g></svg>
+      </div>
+      <div class="flex-grow-1 p-2 border-left">
+        <svg
+          viewBox="0 0 19 20"
+          xmlns="http://www.w3.org/2000/svg"
+          class="kirk-icon sc-ksBlkl Jvfzv"
+          width="18"
+          height="18"
+          aria-hidden="true"
+        ><g fill="none"><path
+              d="M9.583 9.167a3.75 3.75 0 0 0 3.75-3.75v-.834a3.75 3.75 0 0 0-7.5 0v.834a3.75 3.75 0 0 0 3.75 3.75zm0 .833A4.584 4.584 0 0 1 5 5.417v-.834a4.584 4.584 0 0 1 9.167 0v.834A4.584 4.584 0 0 1 9.583 10zM18.333 17.007v1.743c0 .23-.186.417-.416.417H1.25a.417.417 0 0 1-.417-.417v-1.743a3.742 3.742 0 0 1 2.752-3.616c2.033-.554 4.08-.891 5.998-.891 1.92 0 3.966.337 5.998.891a3.742 3.742 0 0 1 2.752 3.616zm-.833 0a2.908 2.908 0 0 0-2.138-2.812c-1.967-.537-3.944-.862-5.779-.862-1.834 0-3.811.325-5.779.862a2.908 2.908 0 0 0-2.137 2.812v1.326H17.5v-1.326z"
+              fill="#708C91"
+            ></path></g></svg>
+      </div>
     </div>
     <a href="#" class="btn btn-primary w-100">Search</a>
   </div>
