--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -10,6 +10,7 @@
 <li>DNI</li>
 <li>{{currentUser.email}}</li>
 <li>Phone number</li>
-
-
+<li>
+<img src="{{currentUser.image}}" alt="profile">
+</li>
 <h1>Additional info</h1>
