--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,6 +1,7 @@
 <h1>{{currentUser.user}}</h1>
-
-<img src="{{currenUser.image}}" alt="profile photo">
+<div>
+  <img class="rounded-circle" src="{{currentUser.image}}" alt="profile" width="240px" height="240px">
+</div>
 
 <a href="/photo">Edit Profile Photo</a>
 
@@ -10,7 +11,4 @@
 <li>DNI</li>
 <li>{{currentUser.email}}</li>
 <li>Phone number</li>
-<li>
-<img src="{{currentUser.image}}" alt="profile">
-</li>
 <h1>Additional info</h1>
