--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,36 @@
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-top: 40px;
 }
 
-.home h1 {
- color: white;
- font-weight: 700;
- text-align: center;
+.home p {
+  color: rgb(112, 140, 145);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.today {
+  margin-left: 16px;
+  color: #054752;
+}
+
+.bridge {
+  background-size: cover;
+  background-image: url('https://cdn.blablacar.com/kairos/assets/images/carpool_only_small-09eb14eafab9352951e1..svg');
+  height: 400px;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+}
+.search {
+  background-color: #00AFF5;
+  color: white;
+  margin-top: -30px;
+  height: 60px;
+}
+
+.home {
+  margin-top: -121px;
+  z-index: 999;
 }
