--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,4 @@
-<ul class="nav nav-pills d-flex justify-content-between fixed mb-1 mt-2">
-  </li>
+<div class="nav nav-pills d-flex justify-content-between bg-white fixed-top h-58">
   <li class="nav-item dropdown" >
     <a
       class="nav-link dropdown-toggle" 
@@ -24,7 +23,7 @@
       {{/if}}
     </ul>
   </li>
-  <li class="nav-item">
+  <div class="nav-item">
     <a class="nav-link" href="/">
     <svg viewBox="0 0 1199.96 1014.39" width="33"><path
       fill="#054752"
@@ -37,8 +36,8 @@
       d="M678.96 619.8c-16-94.4-69.7-173-143-223l-4 21c-27.4 160-26 332 58.6 453 5 7.2 10.2 14 15.7 20.8 60.3-73.2 89.8-171 72.7-271.8z"
     ></path></svg>
     </a>
-  <div>
-  <li class="nav-item d-flex justify-content-end ml-2">
+  </div>
+  <div class="nav-item d-flex justify-content-end ml-2">
     <a class="nav-link  mr-3" href="/trips">
       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT" width="24" height="24" aria-hidden="true"><g fill="none" stroke="#00AFF5" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><line x1="22" y1="22" x2="16.4" y2="16.4"></line><circle cx="10" cy="10" r="9"></circle></g>
       </svg>
@@ -47,6 +46,5 @@
       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT" width="24" height="24" aria-hidden="true"><path stroke-width="0" fill="#00AFF5" fill-rule="evenodd" d="M1.14 11.5a10.36 10.36 0 1120.72 0 10.36 10.36 0 01-20.72 0zM11.5 0a11.5 11.5 0 100 23 11.5 11.5 0 000-23zm.57 6.53a.57.57 0 00-1.14 0v4.4h-4.4a.57.57 0 100 1.14h4.4v4.4a.57.57 0 101.14 0v-4.4h4.4a.57.57 0 000-1.14h-4.4z"></path>
       </svg>
     </a>
-  </li>
   </div>
-</ul>
+</div>
