--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -23,7 +23,7 @@
       {{/if}}
     </ul>
   </li>
-  <div class="nav-item mt-1 ">
+  <div class="nav-item mt-1">
     <a class="nav-link" href="/">
     <svg viewBox="0 0 1199.96 1014.39" width="33"><path
       fill="#054752"
@@ -37,7 +37,7 @@
     ></path></svg>
     </a>
   </div>
-  <div class="nav-item d-flex justify-content-end ml-2 mt-1">
+  <div class="nav-item d-flex justify-content-end mt-1">
     <a class="nav-link  mr-3" href="/trips">
       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="kirk-icon sc-ksBlkl eBMhlT" width="24" height="24" aria-hidden="true"><g fill="none" stroke="#00AFF5" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"><line x1="22" y1="22" x2="16.4" y2="16.4"></line><circle cx="10" cy="10" r="9"></circle></g>
       </svg>
