--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -15,7 +15,7 @@
     </div>
     <div class="mb-3">
       <label for="date" class="form-label">Date</label>
-      <input type="text" name="date" id="date" class="form-control" placeholder="Date">
+      <input type="date" name="date" id="date" class="form-control" placeholder="Date">
     </div>
     <div class="mb-3">
       <label for="seats" class="form-label">Seats</label>
