--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -8,6 +8,7 @@
     <li class="list-group-item border-bottom border-top border-5">Price: {{trip.price}}€</li>
     <li class="list-group-item border-0" style="width: 80%;">{{trip.user.user}}</li>
     <li class="list-group-item">Escribir a {{trip.user.user}}</li>
+    <li class="list-group-item">Date {{trip.date}}</li>
     <li class="list-group-item border-0">Seats</li>
     <li class="list-group-item border-bottom border-2">Car</li>
     <li class="list-group-item">Continuar</li>
