Edit and Delete trip

--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -15,4 +15,10 @@
   </ul>
 </div>
 
+{{#isOwnedBy trip currentUser}}
 <a class="btn btn-primary" href="{{trip.id}}/edit">Edit</a>
+
+<form action="/trips/{{trip.id}}/delete" method="post">
+<button class="btn btn-danger" type="submit">Delete</button>
+</form>
+{{/isOwnedBy}}
