--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -1,5 +1,5 @@
 <div class="bridge position-relative">
-  <h1 class="position-absolute text-white top-0 pt-3">Your pick of rides at low
+  <h1 class="position-absolute text-white text-center p-3 top-0 pt-5">Your pick of rides at low
     prices</h1>
 </div>
 <div class="home card mx-auto rounded-4 shadow" style="width: 90%;">
@@ -160,7 +160,7 @@
     carpool, find the perfect ride from our wide range of destinations and
     routes at low prices.</p>
 </div>
-<div class="card mx-auto border-0 mt--10" style="width: 90%;">
+<div class="card mx-auto border-0" style="width: 90%;">
   <div class="mb-3">
     <svg
       viewBox="0 0 24 24"
@@ -189,7 +189,7 @@
     who you’re travelling with and can book your ride at ease on our secure
     platform.</p>
 </div>
-<div class="card mx-auto border-0 mt-2" style="width: 90%;">
+<div class="card mx-auto border-0 mt-2  pb-5" style="width: 90%;">
   <div class="mb-3">
     <svg
       viewBox="0 0 24 24"
@@ -212,4 +212,22 @@
   <p class="fs-8 text-secondary">Booking a ride has never been easier! Thanks to
     our simple app powered by great technology, you can book a ride close to you
     in just minutes.</p>
+</div>
+<div class="help text-center">
+  <img class="run w-100" src="https://cdn.blablacar.com/kairos/assets/images/scamDetective-653544b71d88f51797db..svg" alt="help" width="525px" height="302px">
+  <h1 class="text-white mb-3 fw-normal mt-4">Help us keep you safe from scams</h1>
+
+  <p class="text-white p-3 fw-normal">At BlaBlaCar, we're working hard to make our platform as secure as it can
+    be. But when scams do happen, we want you to know exactly how to avoid and
+    report them. Follow our tips to help us keep you safe.</p>
+
+  <button class="learn btn btn-outline-primary rounded-pill bg-light text-blue mb-5 border-0 fw-normal" href="#">Learn More</button>
+</div>
+<div class="car text-center">
+  <img class="run w-100" src="https://cdn.blablacar.com/kairos/assets/images/driver_masks-8bad4a96a1d6cbab177e..svg" alt="help" width="525px" height="302px">
+  <h1 class="text-black mb-3 fw-normal mt-4">Where do you want to drive to?</h1>
+
+  <p class="text-black p-3 fw-normal">Let's make this your least expensive journey ever.</p>
+
+  <a class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal" href="/trips/new">Publish a ride</a>
 </div>
