--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,3 +59,15 @@ body {
   padding-top: 10;
   padding-bottom: 10;
 }
+
+.where {
+  background-color: #054752;
+  padding: 0 24;
+  padding-top: 30;
+  padding-bottom: 30;
+  font-size: large;
+}
+
+.where h1 {
+  font-size: large;
+}
