--- a/views/commons/home.hbs
+++ b/views/commons/home.hbs
@@ -255,17 +255,17 @@
   <h2 class="text-white fs-25">Where do you want a ride to?</h2>
   <div class="card mx-auto mb-2" style="width: 90%;">
     <div class="card-body">
-      <p class="card-text">london --> Manchester</p>
+      <p class="card-text">London --> Manchester</p>
     </div>
   </div>
   <div class="card mx-auto mb-2" style="width: 90%;">
     <div class="card-body">
-      <p class="card-text">london --> Manchester</p>
+      <p class="card-text">Edimburgh --> Newcastle</p>
     </div>
   </div>
   <div class="card mx-auto mb-2" style="width: 90%;">
     <div class="card-body">
-      <p class="card-text">london --> Manchester</p>
+      <p class="card-text">Bristol --> London</p>
     </div>
   </div>
 </div>
