Book a trip MVC

--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -28,5 +28,13 @@
 </form>
 {{/isOwnedBy}}
 
+<a
+    class="publish btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal"
+    href="/trips/{{trip.id}}/book"
+  >Continue</a>
+
+
+
+
 
 
