--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,14 +1,31 @@
-<h1>Login User</h1>
 
-<form action="/login" method="POST">
-    <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" name="email" id="email" class="form-control" placeholder="Email">
+<div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+     <h1 class="fs-25 mt-25">What's your email and password?</h1>
+    <div class="card border-0">
+      <div class="card-body">
+        {{#if errors}}<div class="alert alert-danger">Review form data</div>{{/if}}
+        
+        <form action="/login" method="POST">
+          <div class="input-group mb-2">
+            <span class="input-group-text"><i class="fa fa-envelope fa-fw"></i></span>
+            <input type="email" value="{{user.email}}" name="email" class="form-control bg-body-secondary {{#if errors.email}}is-invalid{{/if}}"
+              placeholder="Email">
+            {{#if errors.email}}<div class="invalid-feedback">{{errors.email}}</div>{{/if}}
+          </div>
+          <div class="input-group mb-2">
+            <span class="input-group-text"><i class="fa fa-lock fa-fw"></i></span>
+            <input type="password" value="{{user.password}}" name="password"
+              class="form-control bg-body-secondary {{#if errors.password}}is-invalid{{/if}}" placeholder="Password">
+            {{#if errors.password}}<div class="invalid-feedback">{{errors.password}}</div>{{/if}}
+          </div>
+           <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Remember me</label>
+  </div>
+     <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Login</button>
+        </form>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input type="password" name="password" id="password" class="form-control" placeholder="Password">
-    </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+  </div>
+</div>
