--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -16,7 +16,7 @@
       <li><a class="dropdown-item" href="/profile">Profile</a></li>
       <li><a class="dropdown-item" href="/profile/transfers">Transfers</a></li>
       <li><a class="dropdown-item" href="/profile/payments">Payments & refunds</a></li>
-      <li><a class="dropdown-item" href="/">Log out</a></li>
+      <li><a class="dropdown-item" href="/logout">Log out</a></li>
       {{else}}
       <li><a class="dropdown-item" href="/login">Log In</a></li>
       <li><a class="dropdown-item" href="/users/new">Sign up</a></li>
