--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -16,6 +16,7 @@
     <div class="mb-3">
       <label for="date" class="form-label">Date</label>
       <input type="date" name="date" id="date" class="form-control" placeholder="Date">
+      {{!-- min="{{mindate}}" --}}
     </div>
     <div class="mb-3">
       <label for="seats" class="form-label">Seats</label>
