--- a/views/users/rides.hbs
+++ b/views/users/rides.hbs
@@ -4,3 +4,7 @@
 
 
 <p>Find the perfect ride from thousands of destinations, or publish to share your travel costs.</p>
+
+{{#each currentUser.adquiredTrips as |trip|}}
+<li>{{trip.from}}</li>
+{{/each}}
