Update seats from a book

--- a/views/trips/list.hbs
+++ b/views/trips/list.hbs
@@ -10,6 +10,7 @@
         <li>{{trip.from}}</li>
         <li>{{trip.to}}</li>
         <li>Price: {{trip.price}}€</li>
+        <li>Seats: {{trip.seats}}</li>
         <li>{{trip.user.user}}</li>
       </div>
     </a>
