--- a/views/users/rides.hbs
+++ b/views/users/rides.hbs
@@ -14,6 +14,7 @@
         <li>{{trip.from}}</li>
         <li>{{trip.to}}</li>
         <li>Price: {{trip.price}}€</li>
+        <li>Seats: {{trip.seats}}</li>
         <li>{{trip.user.user}}</li>
       </div>
     </div>
