Create random users with faker

--- a/views/trips/list.hbs
+++ b/views/trips/list.hbs
@@ -12,6 +12,8 @@
         <li>Price: {{trip.price}}€</li>
         <li>Seats: {{trip.seats}}</li>
         <li>{{trip.user.user}}</li>
+        <li>{{trip.date}}</li>
+        <img class="rounded-circle mt-1" src="{{trip.user.image}}" alt="user" width="28px" height="28px">
       </div>
     </a>
   {{/each}}
