--- a/views/trips/detail.hbs
+++ b/views/trips/detail.hbs
@@ -3,6 +3,7 @@
 
 <div class="card border-0" style="width: 100%;">
   <ul class="list-group list-group-flush">
+    <img class="rounded-circle mt-1" src="{{trip.user.image}}" alt="user" width="28px" height="28px">
     <li class="list-group-item border-0">{{trip.from}}</li>
     <li class="list-group-item">{{trip.to}}</li>
     <li class="list-group-item border-bottom border-top border-5">Price: {{trip.price}}€</li>
