Login view finished

--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -22,6 +22,7 @@
            <div class="mb-3 form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Remember me</label>
+    <p class="pt-2">Not a member yet? <a class="signUp text-decoration-none" href="/users/new">Sign up</a></p>
   </div>
      <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Login</button>
         </form>
