--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -15,7 +15,7 @@
     </div>
     <div class="mb-3">
       <label for="birthdate" class="form-label">Birthdate</label>
-      <input type="date" name="birthdate" id="birthdate" class="form-control">
+      <input type="date" value="{{currenUser.birthdate}}" name="birthdate" id="birthdate" class="form-control">
     </div>
     <div class="mb-3">
       <label for="image" class="form-label">Profile Image</label>
