More Profile Css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -91,3 +91,12 @@ body {
   font-size: 18px;
   margin-right: 25px;
 }
+
+.verify {
+  font-size: 18px;
+  margin-right: 25px;
+}
+
+.circle {
+  color: #00AFF5;
+}
