Profile page finished

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,7 +1,7 @@
 
 <div class="d-flex justify-content-evenly border-bottom mb-5 pt-3">
-  <a class="text-decoration-none" href="/profile">About You</a>
-  <a class="text-decoration-none" href="">Account</a>
+  <a class="text-decoration-none text-dark fw-bold" href="/profile">About You</a>
+  <a class="text-decoration-none text-dark fw-bold" href="">Account</a>
 </div>
 
 
@@ -78,6 +78,24 @@
   <div class="anchors d-flex align-items-start flex-column ms-1">
   <div class="mb-4">
     <a class="signUp text-decoration-none" href="/photo">Edit travel preferences</a>
+  </div>
+  </div>
+</div>
+
+<div class="mb-1 d-flex align-items-center flex-column">
+  <div class="d-flex justify-content-between mb-2"  style="width: 85%;">
+    <div>
+      <h3 class="pl-30 fw-bold mt-4">Vehicles</h3>
+    </div>
+  </div>
+</div>
+
+<div class="verify mb-3 d-flex align-items-start flex-column ms-4">
+  <div class="d-flex align-items-start">
+    <h4 class="ms-3">Opel Astra</h4>
+  </div>
+  <div class="mb-4 d-flex align-items-start">
+    <p class="text-secondary ms-3">White</p>
   </div>
   </div>
 </div>
