--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,43 +1,43 @@
-<h1>Create a new User</h1>
-
-
-{{#if errors}}
-  <div class="alert alert-danger">
-    review form data
+<div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+     <h1 class="fs-25 mt-25">Create a New User</h1>
+    <div class="card border-0">
+      <div class="card-body">
+        <form action="/trips/new" method="POST">
+          <div class="mb-3">
+            <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-user fa-fw" aria-hidden="true"></i></span>
+                  <input type="user" name="user" class="form-control bg-body-secondary"
+                    placeholder="User">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-id-card-o fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" name="name" class="form-control bg-body-secondary"
+                    placeholder="Name">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-id-card fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" name="lastName" class="form-control bg-body-secondary"
+                    placeholder="Last Name">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
+                  <input type="date" name="birthDate" class="form-control bg-body-secondary"
+                    placeholder="BirthDate">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-at" aria-hidden="true"></i></span>
+                  <input type="email" name="email" class="form-control bg-body-secondary"
+                    placeholder="Email">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" name="comments" class="form-control bg-body-secondary"
+                    placeholder="Comments">
+              </div>
+                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Create</button>
+        </form>
+      </div>
+    </div>
   </div>
-{{/if}}
-
-<form action="/users/new" method="POST">
-    <div class="mb-3">
-      <label for="user" class="form-label">User</label>
-      <input type="text"  value="{{user.user}}" name="user" id="user" class="form-control {{#if errors.user}}is-invalid{{/if}}" placeholder="User">
-        {{#if errors.user}}<div class="invalid-feedback">{{errors.user}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="name" class="form-label">name</label>
-      <input type="text" value="{{user.name}}" name="name" id="name" class="form-control {{#if errors.name}}is-invalid{{/if}}" placeholder="Name">
-      {{#if errors.name}}<div class="invalid-feedback">{{errors.name}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="lastName" class="form-label">Last Name</label>
-      <input type="text" value="{{user.lastName}}" name="lastName" id="lastName" class="form-control {{#if errors.lastName}}is-invalid{{/if}}" placeholder="Last Name">
-      {{#if errors.lastName}}<div class="invalid-feedback">{{errors.lastName}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="birthdate" class="form-label">Birthdate</label>
-      <input type="date" value="{{user.birthdate}}" name="birthdate" id="birthdate" class="form-control {{#if errors.birthdate}}is-invalid{{/if}}" placeholder="Birthdate">
-      {{#if errors.birthdate}}<div class="invalid-feedback">{{errors.birthdate}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" value="{{user.email}}" name="email" id="email" class="form-control {{#if errors.email}}is-invalid{{/if}}" placeholder="Email">
-      {{#if errors.email}}<div class="invalid-feedback">{{errors.email}}</div>{{/if}}
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input type="password" name="password" id="password" class="form-control {{#if errors.password}}is-invalid{{/if}}" placeholder="Password">
-      {{#if errors.password}}<div class="invalid-feedback">{{errors.password}}</div>{{/if}}
-    </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Create</button>
-</form>
+</div>
